--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,253 @@
+@media (max-width: 768px) {
+  .main_btn {
+    background: linear-gradient(165deg, #ff79da, #9356dc);
+    font-size: 1.1em;
+    color: white;
+    border: none;
+    padding: 20px;
+    margin: 10px 0 40px 0;
+    border-radius: 30px;
+  }
+}
+@media (max-width: 768px) {
+  .main_logo {
+    text-align: center;
+  }
+  .main_logo img {
+    width: 50%;
+  }
+}
+@media (max-width: 768px) {
+  .search_form {
+    background-color: #e3e1e1;
+  }
+  .search_form form {
+    display: flex;
+    justify-content: center;
+    margin-left: 50px;
+  }
+  .search_form form .localisation {
+    margin: 10px;
+  }
+  .search_form form input {
+    border: none;
+    background-color: #e3e1e1;
+  }
+}
+@font-face {
+  font-family: "Shrikhand";
+  src: url("public/police/Shrikhand-Regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url("public/police/Roboto-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+body {
+  font-family: Roboto, Arial, Sans Serif;
+}
+
+h1,
+h2 {
+  font-family: Shrikhand, Arial, Sans Serif;
+}
+
+@media (max-width: 768px) {
+  #localisation_section {
+    background-color: #f2f2f2;
+  }
+  #localisation_section .main_description {
+    text-align: center;
+  }
+  #localisation_section .main_description h2 {
+    margin: 25px 45px 5px 45px;
+  }
+  #localisation_section .main_description p {
+    margin: 5px 20px 20px 20px;
+  }
+
+  #function_section {
+    margin-top: 50px;
+  }
+  #function_section .function {
+    margin-left: 12px;
+  }
+  #function_section h2 {
+    margin-left: 12px;
+  }
+  #function_section .step_1,
+#function_section .step_2,
+#function_section .step_3 {
+    background-color: #f2f2f2;
+    margin: 15px;
+    border-radius: 20px;
+    box-shadow: 0px 3px 6px #cdcbcb;
+  }
+  #function_section .step_1 a,
+#function_section .step_2 a,
+#function_section .step_3 a {
+    outline: none;
+    text-decoration: none;
+    color: black;
+    display: flex;
+  }
+  #function_section .step_1 a:hover,
+#function_section .step_2 a:hover,
+#function_section .step_3 a:hover {
+    background-color: #f2eafb;
+    border-radius: 20px;
+  }
+  #function_section .step_1 a:hover .phone_logo,
+#function_section .step_1 a:hover .list_logo,
+#function_section .step_1 a:hover .store_logo,
+#function_section .step_2 a:hover .phone_logo,
+#function_section .step_2 a:hover .list_logo,
+#function_section .step_2 a:hover .store_logo,
+#function_section .step_3 a:hover .phone_logo,
+#function_section .step_3 a:hover .list_logo,
+#function_section .step_3 a:hover .store_logo {
+    color: #9356dc;
+  }
+  #function_section .step_1 span,
+#function_section .step_2 span,
+#function_section .step_3 span {
+    align-self: center;
+    height: 10%;
+    background-color: #9356dc;
+    color: white;
+    margin: 0 20px 0 -10px;
+    padding: 2px 6px 2px 6px;
+    border-radius: 15px;
+  }
+  #function_section .step_1 p,
+#function_section .step_2 p,
+#function_section .step_3 p {
+    font-size: 1.1em;
+    font-weight: bold;
+    margin: 20px;
+  }
+  #function_section .step_1 .phone_logo,
+#function_section .step_1 .list_logo,
+#function_section .step_1 .store_logo,
+#function_section .step_2 .phone_logo,
+#function_section .step_2 .list_logo,
+#function_section .step_2 .store_logo,
+#function_section .step_3 .phone_logo,
+#function_section .step_3 .list_logo,
+#function_section .step_3 .store_logo {
+    display: flex;
+    align-items: center;
+    color: #666666;
+    width: 16px;
+  }
+
+  #restaurants_section {
+    background-color: #e3e1e1;
+    padding: 15px;
+    margin-top: 50px;
+  }
+  #restaurants_section h2 {
+    margin: 40px 0 20px 12px;
+  }
+  #restaurants_section .restaurants_chart {
+    background-color: white;
+    border-radius: 15px;
+    width: 100%;
+    max-height: 250px;
+    box-shadow: 0px 3px 6px #cdcbcb;
+  }
+  #restaurants_section .restaurants_chart .img_restaurant {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    width: 100%;
+    max-height: 150px;
+    object-fit: cover;
+  }
+  #restaurants_section .restaurants_chart a {
+    outline: none;
+    text-decoration: none;
+    color: black;
+  }
+  #restaurants_section .restaurants_chart a:visited {
+    outline: none;
+    text-decoration: none;
+    color: black;
+  }
+  #restaurants_section .restaurants_chart .chart_description {
+    display: flex;
+    margin: 0 0 20px 0;
+  }
+  #restaurants_section .restaurants_chart .chart_description h3 {
+    margin: 0;
+  }
+  #restaurants_section .restaurants_chart .chart_description p {
+    margin: 0;
+  }
+  #restaurants_section .restaurants_chart .chart_description .description_text {
+    width: 85%;
+    margin: 5px 0 10px 10px;
+  }
+  #restaurants_section .restaurants_chart .chart_description .logo_heart {
+    display: block;
+    align-self: center;
+    margin: 0 15px 15px 0;
+    font-size: 1.1em;
+  }
+  #restaurants_section .restaurants_chart .chart_description .logo_heart:hover {
+    display: none;
+  }
+  #restaurants_section .restaurants_chart .chart_description .logo_heart:active {
+    display: none;
+  }
+
+  footer {
+    background-color: #4c4646;
+    color: white;
+  }
+  footer .block_footer {
+    text-align: start;
+    margin: 0 0 0 15px;
+  }
+  footer .block_footer .main_logo {
+    width: 40%;
+    margin: 30px 0 5px 0;
+  }
+  footer .block_footer p {
+    margin: 10px 0 0 0;
+  }
+  footer .block_footer .add_restaurant {
+    display: flex;
+  }
+  footer .block_footer .add_restaurant .ustensils {
+    display: flex;
+    width: 16px;
+    height: 16px;
+    align-self: center;
+    justify-content: center;
+    margin: 10px 10px 0 0;
+  }
+  footer .block_footer .partnership {
+    display: flex;
+  }
+  footer .block_footer .partnership .handshake {
+    display: flex;
+    width: 16px;
+    height: 16px;
+    align-self: center;
+    justify-content: center;
+    margin: 10px 10px 0 0;
+  }
+  footer .block_footer .contact {
+    margin-top: 10px;
+  }
+  footer .block_footer .contact a {
+    outline: none;
+    text-decoration: none;
+    color: white;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
