--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,67 +1,80 @@
-@media (max-width: 768px) {
-  .main_btn {
-    background: linear-gradient(165deg, #ff79da, #9356dc);
-    font-size: 1.1em;
-    color: white;
-    border: none;
-    padding: 20px;
-    margin: 10px 0 40px 0;
-    border-radius: 30px;
-  }
+.main_btn {
+  background: linear-gradient(165deg, #ff79da, #9356dc);
+  font-size: 1.1em;
+  color: white;
+  border: none;
+  padding: 20px;
+  margin: 10px 0 40px 0;
+  border-radius: 30px;
+}
 
-  .command_btn {
-    display: flex;
-    justify-content: center;
-  }
-  .command_btn .main_btn--modifier {
-    padding: 10px 40px 10px 40px;
-    margin: 30px 0 60px 0;
-  }
+.command_btn {
+  display: flex;
+  justify-content: center;
 }
-@media (max-width: 768px) {
-  header {
-    display: flex;
-  }
-  header .main_logo {
-    text-align: center;
-  }
-  header .main_logo img {
-    width: 50%;
-  }
+.command_btn .main_btn--modifier {
+  padding: 10px 40px 10px 40px;
+  margin: 0 0 60px 0;
+}
 
-  .menus_header {
-    display: flex;
-  }
-  .menus_header a {
-    outline: none;
-    text-decoration: none;
-    color: black;
-    margin-left: 15px;
-  }
-  .menus_header .main_logo {
-    padding-right: 15px;
-  }
-  .menus_header img {
-    width: 50%;
+header {
+  display: flex;
+}
+header .main_logo {
+  width: 100%;
+  text-align: center;
+}
+header .main_logo img {
+  width: 50%;
+}
+
+.menus_header {
+  display: flex;
+  width: 100%;
+  justify-content: start;
+}
+.menus_header .back__arrow {
+  align-self: center;
+}
+.menus_header .back__arrow a {
+  outline: none;
+  text-decoration: none;
+  color: black;
+  margin-left: 15px;
+}
+.menus_header .main_logo {
+  width: 100%;
+}
+.menus_header .img_logo {
+  width: 40%;
+}
+
+@media (min-width: 650px) and (max-width: 768px) {
+  .menus_header .img_logo {
+    width: 30%;
   }
 }
-@media (max-width: 768px) {
-  .search_form {
-    background-color: #e3e1e1;
-  }
-  .search_form form {
-    display: flex;
-    justify-content: center;
-    margin-left: 50px;
-  }
-  .search_form form .localisation {
-    margin: 10px;
-  }
-  .search_form form input {
-    border: none;
-    background-color: #e3e1e1;
+@media (min-width: 769px) {
+  .menus_header .img_logo {
+    width: 25%;
   }
 }
+.search_form {
+  background-color: #e3e1e1;
+}
+.search_form form {
+  display: flex;
+  justify-content: center;
+  margin-left: 50px;
+}
+.search_form form .localisation {
+  margin: 10px;
+}
+.search_form form input {
+  border: none;
+  background-color: #e3e1e1;
+}
+
 @font-face {
   font-family: "Shrikhand";
   src: url("public/police/Shrikhand-Regular.otf") format("opentype");
@@ -74,61 +87,60 @@
   font-weight: normal;
   font-style: normal;
 }
-body {
+body,
+h2 {
   font-family: Roboto, Arial, Sans Serif;
 }
 
-h1,
-h2 {
+h1 {
   font-family: Shrikhand, Arial, Sans Serif;
 }
 
-@media (max-width: 768px) {
-  #localisation_section {
-    background-color: #f2f2f2;
-  }
-  #localisation_section .main_description {
-    text-align: center;
-  }
-  #localisation_section .main_description h2 {
-    margin: 25px 45px 5px 45px;
-  }
-  #localisation_section .main_description p {
-    margin: 5px 20px 20px 20px;
-  }
+#localisation_section {
+  background-color: #f2f2f2;
+}
+#localisation_section .main_description {
+  text-align: center;
+}
+#localisation_section .main_description h2 {
+  margin: 25px 45px 5px 45px;
+}
+#localisation_section .main_description p {
+  margin: 5px 20px 20px 20px;
+}
 
-  #function_section {
-    margin-top: 50px;
-  }
-  #function_section .function {
-    margin-left: 12px;
-  }
-  #function_section h2 {
-    margin-left: 12px;
-  }
-  #function_section .step_1,
+#function_section {
+  margin-top: 50px;
+}
+#function_section .function {
+  margin-left: 12px;
+}
+#function_section h2 {
+  margin-left: 12px;
+}
+#function_section .step_1,
 #function_section .step_2,
 #function_section .step_3 {
-    background-color: #f2f2f2;
-    margin: 15px;
-    border-radius: 20px;
-    box-shadow: 0px 3px 6px #cdcbcb;
-  }
-  #function_section .step_1 a,
+  background-color: #f2f2f2;
+  margin: 15px;
+  border-radius: 20px;
+  box-shadow: 0px 3px 6px #cdcbcb;
+}
+#function_section .step_1 a,
 #function_section .step_2 a,
 #function_section .step_3 a {
-    outline: none;
-    text-decoration: none;
-    color: black;
-    display: flex;
-  }
-  #function_section .step_1 a:hover,
+  outline: none;
+  text-decoration: none;
+  color: black;
+  display: flex;
+}
+#function_section .step_1 a:hover,
 #function_section .step_2 a:hover,
 #function_section .step_3 a:hover {
-    background-color: #f2eafb;
-    border-radius: 20px;
-  }
-  #function_section .step_1 a:hover .phone_logo,
+  background-color: #f2eafb;
+  border-radius: 20px;
+}
+#function_section .step_1 a:hover .phone_logo,
 #function_section .step_1 a:hover .list_logo,
 #function_section .step_1 a:hover .store_logo,
 #function_section .step_2 a:hover .phone_logo,
@@ -137,27 +149,27 @@ h2 {
 #function_section .step_3 a:hover .phone_logo,
 #function_section .step_3 a:hover .list_logo,
 #function_section .step_3 a:hover .store_logo {
-    color: #9356dc;
-  }
-  #function_section .step_1 span,
+  color: #9356dc;
+}
+#function_section .step_1 span,
 #function_section .step_2 span,
 #function_section .step_3 span {
-    align-self: center;
-    height: 10%;
-    background-color: #9356dc;
-    color: white;
-    margin: 0 20px 0 -10px;
-    padding: 2px 6px 2px 6px;
-    border-radius: 15px;
-  }
-  #function_section .step_1 p,
+  align-self: center;
+  height: 10%;
+  background-color: #9356dc;
+  color: white;
+  margin: 0 20px 0 -10px;
+  padding: 2px 6px 2px 6px;
+  border-radius: 15px;
+}
+#function_section .step_1 p,
 #function_section .step_2 p,
 #function_section .step_3 p {
-    font-size: 1.1em;
-    font-weight: bold;
-    margin: 20px;
-  }
-  #function_section .step_1 .phone_logo,
+  font-size: 1.1em;
+  font-weight: bold;
+  margin: 20px;
+}
+#function_section .step_1 .phone_logo,
 #function_section .step_1 .list_logo,
 #function_section .step_1 .store_logo,
 #function_section .step_2 .phone_logo,
@@ -166,182 +178,239 @@ h2 {
 #function_section .step_3 .phone_logo,
 #function_section .step_3 .list_logo,
 #function_section .step_3 .store_logo {
-    display: flex;
-    align-items: center;
-    color: #666666;
-    width: 16px;
-  }
+  display: flex;
+  align-items: center;
+  color: #666666;
+  width: 16px;
+}
 
-  #restaurants_section {
-    background-color: #e3e1e1;
-    padding: 15px;
-    margin-top: 50px;
-  }
-  #restaurants_section h2 {
-    margin: 40px 0 20px 12px;
-  }
+#restaurants_section {
+  background-color: #e3e1e1;
+  padding: 15px;
+  margin-top: 50px;
+}
+#restaurants_section h2 {
+  margin: 40px 0 20px 12px;
+}
+#restaurants_section .restaurants_chart {
+  background-color: white;
+  border-radius: 15px;
+  width: 100%;
+  max-height: 250px;
+  box-shadow: 0px 3px 6px #cdcbcb;
+  position: relative;
+}
+#restaurants_section .restaurants_chart .new {
+  color: #008766;
+  background: #99e2d0;
+  border: 5px solid #99e2d0;
+  border-radius: 5px;
+  position: absolute;
+  right: 1%;
+  top: 5%;
+  padding: 0 5px 0 5px;
+  margin-right: 5px;
+}
+#restaurants_section .restaurants_chart .img_restaurant {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  width: 100%;
+  max-height: 150px;
+  object-fit: cover;
+}
+#restaurants_section .restaurants_chart a {
+  outline: none;
+  text-decoration: none;
+  color: black;
+}
+#restaurants_section .restaurants_chart a:visited {
+  outline: none;
+  text-decoration: none;
+  color: black;
+}
+#restaurants_section .restaurants_chart .chart_description {
+  display: flex;
+  margin: 0 0 20px 0;
+}
+#restaurants_section .restaurants_chart .chart_description h3 {
+  margin: 0;
+}
+#restaurants_section .restaurants_chart .chart_description p {
+  margin: 0;
+}
+#restaurants_section .restaurants_chart .chart_description .description_text {
+  width: 85%;
+  margin: 5px 0 10px 10px;
+}
+#restaurants_section .restaurants_chart .chart_description .logo_heart {
+  display: block;
+  align-self: center;
+  margin: 0 15px 15px 0;
+  font-size: 1.1em;
+}
+#restaurants_section .restaurants_chart .chart_description .logo_heart:hover {
+  display: none;
+}
+#restaurants_section .restaurants_chart .chart_description .logo_heart:active {
+  display: none;
+}
+
+footer {
+  background-color: #4c4646;
+  color: white;
+}
+footer .block_footer {
+  text-align: start;
+  padding: 15px;
+}
+footer .block_footer h3 {
+  font-family: Shrikhand;
+  font-weight: lighter;
+}
+footer .block_footer .main_logo {
+  width: 40%;
+  margin: 30px 0 5px 0;
+}
+footer .block_footer p {
+  margin: 10px 0 0 0;
+}
+footer .block_footer .add_restaurant {
+  display: flex;
+}
+footer .block_footer .add_restaurant .ustensils {
+  display: flex;
+  width: 16px;
+  height: 16px;
+  align-self: center;
+  justify-content: center;
+  margin: 10px 10px 0 0;
+}
+footer .block_footer .partnership {
+  display: flex;
+}
+footer .block_footer .partnership .handshake {
+  display: flex;
+  width: 16px;
+  height: 16px;
+  align-self: center;
+  justify-content: center;
+  margin: 10px 10px 0 0;
+}
+footer .block_footer .contact {
+  margin-top: 10px;
+}
+footer .block_footer .contact a {
+  outline: none;
+  text-decoration: none;
+  color: white;
+}
+
+/* MENUS */
+.menus_section .main_img img {
+  width: 100%;
+  object-fit: cover;
+  max-height: 317px;
+}
+.menus_section .menus_command {
+  position: relative;
+  margin-top: -40px;
+  background-color: #f2f2f2;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  padding: 15px;
+}
+.menus_section .menus_title {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0;
+}
+.menus_section .menus_title h1 {
+  margin: 20px 0 20px 0;
+  font-size: 1.4em;
+}
+.menus_section .menus_title i {
+  align-self: center;
+  margin: 20px 20px 20px 0;
+}
+.menus_section .entrees,
+.menus_section .main_dish,
+.menus_section .desserts {
+  margin-bottom: 30px;
+}
+.menus_section .entrees h2,
+.menus_section .main_dish h2,
+.menus_section .desserts h2 {
+  width: 15%;
+  font-size: 0.9em;
+  border-bottom: 2px solid #99e2d0;
+  padding-bottom: 5px;
+}
+.menus_section .entrees .meal_choice,
+.menus_section .main_dish .meal_choice,
+.menus_section .desserts .meal_choice {
+  background-color: white;
+  border-radius: 15px;
+  margin: 0 0 10px 0;
+  padding: 5px;
+  box-shadow: 0px 3px 6px #cdcbcb;
+}
+.menus_section .entrees .meal_choice h3,
+.menus_section .main_dish .meal_choice h3,
+.menus_section .desserts .meal_choice h3 {
+  font-size: 1em;
+  margin: 0 0 5px 5px;
+}
+.menus_section .entrees .meal_choice p,
+.menus_section .main_dish .meal_choice p,
+.menus_section .desserts .meal_choice p {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1em;
+  margin: 0 0 5px 5px;
+}
+.menus_section .entrees .meal_choice span,
+.menus_section .main_dish .meal_choice span,
+.menus_section .desserts .meal_choice span {
+  font-size: 0.9em;
+  margin-right: 10px;
+  font-weight: bold;
+}
+
+@media (min-width: 650px) and (max-width: 768px) {
   #restaurants_section .restaurants_chart {
-    background-color: white;
-    border-radius: 15px;
-    width: 100%;
-    max-height: 250px;
-    box-shadow: 0px 3px 6px #cdcbcb;
+    height: 250px;
+    margin-bottom: 20px;
   }
   #restaurants_section .restaurants_chart .img_restaurant {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    width: 100%;
-    max-height: 150px;
-    object-fit: cover;
-  }
-  #restaurants_section .restaurants_chart a {
-    outline: none;
-    text-decoration: none;
-    color: black;
-  }
-  #restaurants_section .restaurants_chart a:visited {
-    outline: none;
-    text-decoration: none;
-    color: black;
+    max-height: 190px;
   }
   #restaurants_section .restaurants_chart .chart_description {
-    display: flex;
-    margin: 0 0 20px 0;
-  }
-  #restaurants_section .restaurants_chart .chart_description h3 {
-    margin: 0;
-  }
-  #restaurants_section .restaurants_chart .chart_description p {
-    margin: 0;
-  }
-  #restaurants_section .restaurants_chart .chart_description .description_text {
-    width: 85%;
-    margin: 5px 0 10px 10px;
-  }
-  #restaurants_section .restaurants_chart .chart_description .logo_heart {
-    display: block;
-    align-self: center;
-    margin: 0 15px 15px 0;
-    font-size: 1.1em;
-  }
-  #restaurants_section .restaurants_chart .chart_description .logo_heart:hover {
-    display: none;
-  }
-  #restaurants_section .restaurants_chart .chart_description .logo_heart:active {
-    display: none;
-  }
-
-  footer {
-    background-color: #4c4646;
-    color: white;
-  }
-  footer .block_footer {
-    text-align: start;
-    margin: 0 0 0 15px;
-  }
-  footer .block_footer .main_logo {
-    width: 40%;
-    margin: 30px 0 5px 0;
-  }
-  footer .block_footer p {
-    margin: 10px 0 0 0;
-  }
-  footer .block_footer .add_restaurant {
-    display: flex;
-  }
-  footer .block_footer .add_restaurant .ustensils {
-    display: flex;
-    width: 16px;
-    height: 16px;
-    align-self: center;
-    justify-content: center;
-    margin: 10px 10px 0 0;
-  }
-  footer .block_footer .partnership {
-    display: flex;
-  }
-  footer .block_footer .partnership .handshake {
-    display: flex;
-    width: 16px;
-    height: 16px;
-    align-self: center;
-    justify-content: center;
-    margin: 10px 10px 0 0;
-  }
-  footer .block_footer .contact {
-    margin-top: 10px;
-  }
-  footer .block_footer .contact a {
-    outline: none;
-    text-decoration: none;
-    color: white;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 10px;
   }
 
   /* MENUS */
-  .img_intro_section .img_restaurant {
-    width: 100%;
-  }
-
-  .menus_section {
-    background-color: #f2f2f2;
-  }
-  .menus_section .menus_title {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 0;
+  .menus_section .main_img .img_restaurant {
+    max-height: 317px;
+    object-fit: cover;
   }
   .menus_section .menus_title h1 {
-    margin: 20px 0 20px 12px;
-    font-size: 1.4em;
+    font-size: 1.6em;
   }
   .menus_section .menus_title i {
-    align-self: center;
-    margin: 20px 20px 20px 12px;
+    font-size: 1.5em;
   }
-  .menus_section .entrees,
-.menus_section .main_dish,
-.menus_section .desserts {
-    margin-top: 30px;
-  }
-  .menus_section .entrees h2,
-.menus_section .main_dish h2,
-.menus_section .desserts h2 {
-    width: 15%;
-    margin-left: 12px;
-    font-size: 0.9em;
-    border-bottom: 2px solid #99e2d0;
-    padding-bottom: 5px;
-  }
-  .menus_section .entrees .meal_choice,
-.menus_section .main_dish .meal_choice,
-.menus_section .desserts .meal_choice {
-    width: 90%;
-    background-color: white;
-    border-radius: 15px;
-    margin: 0 0 10px 12px;
-    padding: 5px;
-    box-shadow: 0px 3px 6px #cdcbcb;
-  }
-  .menus_section .entrees .meal_choice h3,
-.menus_section .main_dish .meal_choice h3,
-.menus_section .desserts .meal_choice h3 {
-    font-size: 1em;
-    margin: 0 0 5px 5px;
-  }
-  .menus_section .entrees .meal_choice p,
-.menus_section .main_dish .meal_choice p,
-.menus_section .desserts .meal_choice p {
+}
+@media (min-width: 769px) {
+  .menus_section .menus_command .main_menu {
     display: flex;
-    justify-content: space-between;
-    font-size: 1em;
-    margin: 0 0 5px 5px;
   }
-  .menus_section .entrees .meal_choice span,
-.menus_section .main_dish .meal_choice span,
-.menus_section .desserts .meal_choice span {
-    font-size: 0.9em;
-    margin-right: 10px;
-    font-weight: bold;
+  .menus_section .menus_command .main_menu .entrees,
+.menus_section .menus_command .main_menu .main_dish,
+.menus_section .menus_command .main_menu .desserts {
+    width: 33%;
+    margin: 0 5px 30px 5px;
   }
 }
 
