--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,27 +1,46 @@
-@media (max-width: 768px) {
-  header {
-    display: flex;
-    .main_logo {
-      text-align: center;
-      img {
-        width: 50%;
-      }
+header {
+  display: flex;
+  .main_logo {
+    width: 100%;
+    text-align: center;
+    img {
+      width: 50%;
     }
   }
+}
 
-  .menus_header {
-    display: flex;
+.menus_header {
+  display: flex;
+  width: 100%;
+  justify-content: start;
+  .back__arrow {
+    align-self: center;
     a {
       outline: none;
       text-decoration: none;
       color: black;
       margin-left: 15px;
     }
-    .main_logo {
-      padding-right: 15px;
+  }
+  .main_logo {
+    width: 100%;
+  }
+  .img_logo {
+    width: 40%;
+  }
+}
+
+@media (min-width: 650px) and (max-width: 768px) {
+  .menus_header {
+    .img_logo {
+      width: 30%;
     }
-    img {
-      width: 50%;
+  }
+}
+@media (min-width: 769px) {
+  .menus_header {
+    .img_logo {
+      width: 25%;
     }
   }
 }
