--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -6,6 +6,11 @@
   padding: 20px;
   margin: 10px 0 40px 0;
   border-radius: 30px;
+  box-shadow: 0px 5px 4px $color-shadow;
+  &:hover {
+    box-shadow: 0px 5px 1px $color-shadow;
+    filter: brightness(110%);
+  }
 }
 
 .command_btn {
@@ -14,5 +19,9 @@
   .main_btn--modifier {
     padding: 10px 40px 10px 40px;
     margin: 0 0 60px 0;
+    &:hover {
+      box-shadow: 0px 5px 1px $color-shadow;
+      filter: brightness(110%);
+    }
   }
 }
